--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ GITLAB_API="https://gitlab.com/api/v4"
 GITLAB_USER="GITLAB_USER"
 # Got to `https://gitlab.com/-/user_settings/personal_access_tokens`
 GITLAB_TOKEN="GITLAB_TOKEN"
-GITLAB_ORGS="username,organization"
+GITLAB_ORGS="USERNAME,ORGANIZATION"
 
 # -----------------------------
 # GitHub
@@ -14,7 +14,7 @@ GITHUB_API="https://api.github.com"
 GITHUB_USER="GITHUB_USER"
 # Go to `https://github.com/settings/tokens`
 GITHUB_TOKEN="GITHUB_TOKEN"
-GITHUB_ORGS="username,organization"
+GITHUB_ORGS="USERNAME,ORGANIZATION"
 
 # -----------------------------
 # Forgejo
