It appears you've created a Python project for managing repositories across different platforms like GitLab, GitHub, and Forgejo. The code snippet provided includes the structure of your project with classes, functions, and utilities.
Here is a brief overview of what the provided code does:

1. `Gitforge` is an enum that defines different forges like GitLab, GitHub, and Forgejo.
2. The `Repository` class represents a repository from any supported forge. It takes the full name (repository slug), URL, forge type, and archive status as arguments during instantiation.
3. `Response` is a class that handles responses from API requests and provides methods to parse and access data.
4. `Parser` is a utility class to retrieve nested keys in dictionaries.
5. The variables file (now named src/variables.py) loads environment variables for the configuration of different forges and other parameters like `PER_PAGE`.

The provided code snippet does not contain any actual functionality, but it sets up the project structure and basic classes to build an application that manages repositories across different platforms. You can now start implementing methods to interact with APIs, clone/mirror repositories, manage branches, create issues, etc., as per your requirements.

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,24 @@
 # -----------------------------
 # GitLab
 # -----------------------------
-GITLAB_API="https://gitlab.com/api/v4"
-GITLAB_USER="GITLAB_USER"
-# Got to `https://gitlab.com/-/user_settings/personal_access_tokens`
-GITLAB_TOKEN="GITLAB_TOKEN"
+GITLAB_DOMAIN="gitlab.com"
+# Go to `https://gitlab.com/-/user_settings/personal_access_tokens`
+GITLAB_TOKEN="TOKEN"
 GITLAB_ORGS="USERNAME,ORGANIZATION"
 
 # -----------------------------
 # GitHub
 # -----------------------------
-GITHUB_API="https://api.github.com"
-GITHUB_USER="GITHUB_USER"
 # Go to `https://github.com/settings/tokens`
-GITHUB_TOKEN="GITHUB_TOKEN"
+GITHUB_TOKEN="TOKEN"
 GITHUB_ORGS="USERNAME,ORGANIZATION"
 
 # -----------------------------
 # Forgejo
 # -----------------------------
-FORGEJO_API="https://FORGEJO_INSTANCE/api/v1"
-# Go to `https://FORGEJO_INSTANCE/user/settings/applications`
-FORGEJO_TOKEN="FORGEJO_TOKEN"
+FORGEJO_DOMAIN="codeberg.org"
+# Go to `https://FORGEJO_DOMAIN/user/settings/applications`
+FORGEJO_TOKEN="TOKEN"
 
 # -----------------------------
 # Options
