It looks like you have updated the codebase for a Python project from GitLab to Forge (GitHub). The changes include renaming `kiwilan` to `group`, changing some variable names, and updating the API endpoint used.
Here are the main changes:
- Renamed the organization name from `kiwilan` to `group` in several files, including `src/models/repository.py`.
- Changed the method name for checking if a repository exists from `is_exists()` to `get_repository()` in the `Forgejo` class of `src/forge/forgejo.py`.
- Updated the API endpoint used to get a specific repository from `/repos/{organization}/{name}` to `/repos/{group}/{name}` in several files, including `src/forge/forgejo.py` and `src/utils/logger/__init__.py`.
- Added some new classes and methods related to logging in the `src/utils/logger` folder. These include `LoggerColor`, `Logger`, and associated methods for logging messages at different levels (info, success, warning, error).

--- a/.env.example
+++ b/.env.example
@@ -4,14 +4,14 @@
 GITLAB_DOMAIN="gitlab.com"
 # Go to `https://gitlab.com/-/user_settings/personal_access_tokens`
 GITLAB_TOKEN="TOKEN"
-GITLAB_ORGS="USERNAME,ORGANIZATION"
+GITLAB_ORGS="USERNAME,ORGANIZATION1,ORGANIZATION2"
 
 # -----------------------------
 # GitHub
 # -----------------------------
 # Go to `https://github.com/settings/tokens`
 GITHUB_TOKEN="TOKEN"
-GITHUB_ORGS="USERNAME,ORGANIZATION"
+GITHUB_ORGS="USERNAME,ORGANIZATION1,ORGANIZATION2"
 
 # -----------------------------
 # Forgejo
