--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 # -----------------------------
 GITHUB_ORGS="USERNAME,ORGANIZATION1,ORGANIZATION2"
 # Go to `https://github.com/settings/tokens`
+# Check https://github.com/ewilan-riviere/forgejo-mirroring#environnement to know needed options
 GITHUB_TOKEN="TOKEN"
 
 # -----------------------------
@@ -11,6 +12,7 @@ GITHUB_TOKEN="TOKEN"
 GITLAB_DOMAIN="gitlab.com"
 GITLAB_ORGS="USERNAME,ORGANIZATION1,ORGANIZATION2"
 # Go to `https://gitlab.com/-/user_settings/personal_access_tokens`
+# Check https://github.com/ewilan-riviere/forgejo-mirroring#environnement to know needed options
 GITLAB_TOKEN="TOKEN"
 
 # -----------------------------
@@ -18,6 +20,7 @@ GITLAB_TOKEN="TOKEN"
 # -----------------------------
 FORGEJO_DOMAIN="codeberg.org"
 # Go to `https://codeberg.org/user/settings/applications`
+# Check https://github.com/ewilan-riviere/forgejo-mirroring#environnement to know needed options
 FORGEJO_TOKEN="TOKEN"
 
 # -----------------------------
