--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,6 @@ dev = [
 [build-system]
 requires = ["setuptools>=68"]
 build-backend = "setuptools.build_meta"
+
+[project.scripts]
+forgejo-mirroring = "forgejo_mirroring.app:main"
