--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 dependencies = ["requests", "dotenv"]
 requires-python = ">=3.12"
 readme = "README.md"
-description = "Quickly back up your GitHub and GitLab repositories via Forgejo with mirroring."
+description = "Quickly backup your GitHub and GitLab repositories via Forgejo mirroring."
 authors = [{ name = "Ewilan Rivière" }]
 
 [project.scripts]
